Fixed bug #77335 (SA_RESTART despite SIGALRM unless no restart)